WIP on CoroutinesTimeout for JUnit5

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ kotlin_version=1.4.30
 
 # Dependencies
 junit_version=4.12
+junit5_version=5.5.0
 atomicfu_version=0.15.2
 knit_version=0.2.3
 html_version=0.6.8
